--- a/po/nsis/de.po
+++ b/po/nsis/de.po
@@ -1,21 +1,21 @@
-# German translation for sabnzbd
-# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2020-06-22 22:10+0000\n"
-"Last-Translator: reloxx <Unknown>\n"
-"Language-Team: German <de@li.org>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: German (https://www.transifex.com/sabnzbd/teams/111101/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-06-23 06:02+0000\n"
-"X-Generator: Launchpad (build 1cbd0aa39df153c901321817f9b57cf3f232b507)\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -35,18 +35,16 @@ msgid ""
 "reinstall the SABnzbd service. \\n\\nClick `OK` to remove the existing "
 "services or `Cancel` to cancel this upgrade."
 msgstr ""
-"Aufgrund von Änderungen am SABnzbd Windows Service ab Version 3.0.0 ist es "
-"nötig,\\nden Windows Service neu zu installieren.\\n\\n\r\n"
-"Drücke `OK` um den existierenden Service zu löschen oder `Abbrechen` um "
-"dieses Upgrade abzubrechen."
+"Aufgrund von Änderungen am SABnzbd Windows Service ab Version 3.0.0 ist es nötig,\\nden Windows Service neu zu installieren.\\n\\n\r\n"
+"Drücke `OK` um den existierenden Service zu löschen oder `Abbrechen` um dieses Upgrade abzubrechen."
 
 #: NSIS_Installer.nsi
 msgid ""
 "The installer only supports 64-bit Windows, use the standalone version to "
 "run on 32-bit Windows."
 msgstr ""
-"Der Installer unterstützt nur Windows 64-bit. Benutze die Standalone Version "
-"für Windows 32-bit."
+"Der Installer unterstützt nur Windows 64-bit. Benutze die Standalone Version"
+" für Windows 32-bit."
 
 #: NSIS_Installer.nsi
 msgid "This will uninstall SABnzbd from your system"
@@ -84,33 +82,3 @@ msgstr ""
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "Ihre Einstellungen und Daten bleiben erhalten."
-
-#~ msgid "Download error, retry?"
-#~ msgstr "Download-Fehler. Erneut versuchen?"
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr ""
-#~ "Dieses System erfordert die Installation der Laufzeitbibliothek VC90 von "
-#~ "Microsoft. Möchten Sie die Installation jetzt durchführen?"
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr ""
-#~ "Installation ohne Laufzeitbibliothek nicht möglich. Erneut versuchen?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr ""
-#~ "Installationsprogramm für Microsoft-Laufzeitbibliothek wird "
-#~ "heruntergeladen..."
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-7-0 !"
-#~ msgstr ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nBitte lesen Sie zuerst die "
-#~ "Versionshinweise oder gehen Sie zu http://wiki.sabnzbd.org/introducing-0-7-0 "
-#~ "!"
-
-#~ msgid "Go to the SABnzbd Wiki"
-#~ msgstr "Gehen Sie auf die SABnzbd Wiki-Seite"
