--- a/po/nsis/he.po
+++ b/po/nsis/he.po
@@ -1,21 +1,21 @@
-# Hebrew translation for sabnzbd
-# Copyright (c) 2017 Rosetta Contributors and Canonical Ltd 2017
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
-#
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2020-05-10 13:54+0000\n"
-"Last-Translator: ION IL <Unknown>\n"
-"Language-Team: Hebrew <he@li.org>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: Hebrew (https://www.transifex.com/sabnzbd/teams/111101/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-05-11 06:01+0000\n"
-"X-Generator: Launchpad (build fbdff7602bd10fb883bf7e2ddcc7fd5a16f60398)\n"
+"Language: he\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: (n % 10 == 0 && n % 1 == 0 && n > 10) ? 2 : 3;\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -82,30 +82,3 @@ msgstr ""
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "ההגדרות והנתונים שלך יישמרו."
-
-#~ msgid "Download error, retry?"
-#~ msgstr "שגיאת הורדה, לנסות שוב?"
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr "לא ניתן להתקין ללא ספרית זמן-אמת, לנסות שוב?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr "מוריד מתקין זמן-אמת של Microsoft..."
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr ""
-#~ "מערכת זו דורשת את ספרית זמן-אמת VC90 של Microsoft שתהיה מותקנת תחילה. האם "
-#~ "ברצונך להתקין אותה כעת?"
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-7-0 !"
-#~ msgstr ""
-#~ "                  >>>> אזהרה <<<<\\r\\n\\r\\n! "
-#~ "http://wiki.sabnzbd.org/introducing-0-7-0 אנא, בדוק תחילה את הערות השחרור או "
-#~ "לך אל"
-
-#~ msgid "Go to the SABnzbd Wiki"
-#~ msgstr "SABnzbd לך אל וויקי"
