--- a/po/nsis/zh_CN.po
+++ b/po/nsis/zh_CN.po
@@ -1,21 +1,21 @@
-# Chinese (Simplified) translation for sabnzbd
-# Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
-#
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2017-05-28 17:17+0000\n"
-"Last-Translator: ninjai <ninjai.us@gmail.com>\n"
-"Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: Chinese (China) (https://www.transifex.com/sabnzbd/teams/111101/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-05-08 04:51+0000\n"
-"X-Generator: Launchpad (build fbdff7602bd10fb883bf7e2ddcc7fd5a16f60398)\n"
+"Language: zh_CN\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -75,27 +75,3 @@ msgstr "不可以覆盖安装。\\n\\n点击“确定”可移除旧版，或点
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "您的设置及数据将会保留。"
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-7-0 !"
-#~ msgstr ""
-#~ "                  >>>> *警告* <<<<\\r\\n\\r\\n请首先查看版本说明或访问 "
-#~ "http://wiki.sabnzbd.org/introducing-0-7-0 !"
-
-#~ msgid "Go to the SABnzbd Wiki"
-#~ msgstr "访问 SABnzbd Wiki"
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr "该系统需要先安装 Microsoft 运行时库 VC90。是否希望立即安装?"
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr "没有运行时库无法安装，重试?"
-
-#~ msgid "Download error, retry?"
-#~ msgstr "下载出错，重试?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr "正在下载 Microsoft 运行时安装程序..."
