Update text files for 3.0.0 RC 2

--- a/README.mkd
+++ b/README.mkd
@@ -1,10 +1,16 @@
-Release Notes - SABnzbd 3.0.0 RC 1
+Release Notes - SABnzbd 3.0.0 RC 2
 =========================================================
 
 ## About this new version
 We have been working for months to upgrade the SABnzbd code from Python 2 to Python 3.
 Although it might not sound like a big change, we had to rewrite almost every part of
 the code. We also included a number of new features, listed below.
+
+## Changes since 3.0.0 RC 1
+- Only really run pre-queue-script when it is set.
+- RAR-renamer did not always run on badly named RAR-files.
+- Changes to priority-handling when adding NZB's.
+- Always report API paused status as a boolean.
 
 ## Big changes in 3.0.0
 - Python 3.5 and above are the only supported versions of Python.
