--- a/po/main/es.po
+++ b/po/main/es.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2011-2020 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2020
 # Ester Molla Aragones <moarages@gmail.com>, 2020
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.1.0-develop\n"
@@ -234,7 +234,7 @@ msgstr "Error grave en el ensamblador"
 #. Warning message
 #: sabnzbd/assembler.py
 msgid ""
-"WARNING: Paused job \"%s\" because of encrypted RAR file (if supplied, all "
+"Paused job \"%s\" because of encrypted RAR file (if supplied, all "
 "passwords were tried)"
 msgstr ""
 "AVISO: se ha pausado la tarea \"%s\" debido al archivo codificado RAR (se "
@@ -243,7 +243,7 @@ msgstr ""
 #. Warning message
 #: sabnzbd/assembler.py
 msgid ""
-"WARNING: Aborted job \"%s\" because of encrypted RAR file (if supplied, all "
+"Aborted job \"%s\" because of encrypted RAR file (if supplied, all "
 "passwords were tried)"
 msgstr ""
 "AVISO: se ha cancelado la tarea \"%s\" debido al archivo codificado RAR (se "
@@ -255,7 +255,7 @@ msgstr "Abortado, detectamos cifrados"
 
 #. Warning message
 #: sabnzbd/assembler.py
-msgid "WARNING: In \"%s\" unwanted extension in RAR file. Unwanted file is %s "
+msgid "In \"%s\" unwanted extension in RAR file. Unwanted file is %s "
 msgstr ""
 "ADVERTENCIA: Se ha encontrado una extensión no deseada en el fichero RAR "
 "\"%s\". El fichero no deseado es %s "
@@ -270,12 +270,12 @@ msgstr "Se interrumpió la acción porque se detectó una extensión no deseada"
 
 #. Warning message
 #: sabnzbd/assembler.py
-msgid "WARNING: Paused job \"%s\" because of rating (%s)"
+msgid "Paused job \"%s\" because of rating (%s)"
 msgstr "ADVERTENCIA: Se ha pausado el trabajo \"%s\" debido a su puntuación (%s)"
 
 #. Warning message
 #: sabnzbd/assembler.py
-msgid "WARNING: Aborted job \"%s\" because of rating (%s)"
+msgid "Aborted job \"%s\" because of rating (%s)"
 msgstr "ADVERTENCIA: Se ha abortado el trabajo \"%s\" debido a su puntuación (%s)"
 
 #: sabnzbd/assembler.py
