--- a/po/main/fr.po
+++ b/po/main/fr.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2011-2020 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2020
 # Fred L <88com88@gmail.com>, 2020
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.1.0-develop\n"
@@ -237,7 +237,7 @@ msgstr "Erreur fatale dans l'assembleur"
 #. Warning message
 #: sabnzbd/assembler.py
 msgid ""
-"WARNING: Paused job \"%s\" because of encrypted RAR file (if supplied, all "
+"Paused job \"%s\" because of encrypted RAR file (if supplied, all "
 "passwords were tried)"
 msgstr ""
 "ATTENTION : la tâche \"%s\" a été mise en pause à cause d'un fichier RAR "
@@ -246,7 +246,7 @@ msgstr ""
 #. Warning message
 #: sabnzbd/assembler.py
 msgid ""
-"WARNING: Aborted job \"%s\" because of encrypted RAR file (if supplied, all "
+"Aborted job \"%s\" because of encrypted RAR file (if supplied, all "
 "passwords were tried)"
 msgstr ""
 "ATTENTION : la tâche \"%s\" a été abandonnée à cause d'un fichier RAR "
@@ -258,7 +258,7 @@ msgstr "Interrompu, cryptage détecté"
 
 #. Warning message
 #: sabnzbd/assembler.py
-msgid "WARNING: In \"%s\" unwanted extension in RAR file. Unwanted file is %s "
+msgid "In \"%s\" unwanted extension in RAR file. Unwanted file is %s "
 msgstr ""
 "AVERTISSEMENT : Le fichier RAR\"%s\" contient une extension indésirable. Le "
 "fichier indésirable est %s "
@@ -273,12 +273,12 @@ msgstr "Interrompu, extension indésirable détectée"
 
 #. Warning message
 #: sabnzbd/assembler.py
-msgid "WARNING: Paused job \"%s\" because of rating (%s)"
+msgid "Paused job \"%s\" because of rating (%s)"
 msgstr "AVERTISSEMENT : Tâche \"%s\" mise en pause à cause du classement (%s)"
 
 #. Warning message
 #: sabnzbd/assembler.py
-msgid "WARNING: Aborted job \"%s\" because of rating (%s)"
+msgid "Aborted job \"%s\" because of rating (%s)"
 msgstr "AVERTISSEMENT : tâche \"%s\" annulée à cause du classement (%s)"
 
 #: sabnzbd/assembler.py
