--- a/README.mkd
+++ b/README.mkd
@@ -1,36 +1,20 @@
-Release Notes - SABnzbd 3.1.0 Release Candidate 3
+Release Notes - SABnzbd 3.1.0
 =========================================================
-
-## Changes and bugfixes since 3.1.0 Release Candidate 2
-- Jobs in post-processing could be left in the "Waiting"-status.
-- Notify users of `Deobfuscate.py` that it is now part of SABnzbd.
-
-## Changes and bugfixes since 3.1.0 Release Candidate 1
-- Failing RSS-feeds would result in tracebacks, they now show a warning.
-- Existing files were not parsed when retrying a job.
-- Reading attributes when retrying a job could result in crash.
-- Temporary Folder with unicode characters could result in duplicate unpacking.
-- Plush skin would only show failed jobs.
-- Windows: Folders could end in a period, breaking Windows Explorer.
-
-## Changes and bugfixes since 3.1.0 Beta 2
-- Deobfuscate final filenames can now be used when job folders are disabled.
-- Deobfuscate final filenames will ignore blu-ray disc files.
-- Clear error if Complete Folder is set as a subfolder of the Temporary Folder.
-- Filtering of history by category would not filter jobs in post-processing.
 
 ## Changes since 3.0.2
 - Added option to automatically deobfuscate final filenames: after unpacking, 
   detect and rename obfuscated or meaningless filenames to the job name, 
-  similar to the Deobfuscate.py post-processing script. 
+  similar to the `Deobfuscate.py` post-processing script. 
 - Switched to Transifex as our translations platform:
   Help us translate SABnzbd in your language! Add untranslated texts or 
   improved existing translations here: https://sabnzbd.org/wiki/translate
 - Redesigned job availability-check to be more efficient and reliable.
+- Scheduled readouts of RSS-feeds would fail silently, they now show a warning.
 - Skip repair on Retry if all sets were previously successfully verified.
 - Passwords included in the filename no longer have to be at the end.
 - Restore limit on length of foldernames (`max_foldername_length`).
 - Added password input box on the Add NZB screen. 
+- Clear error if `Complete Folder` is set as a subfolder of the `Temporary Folder`.
 - Show warning that Pyton 3.5 support will be dropped after 3.1.0.
 - Windows/macOS: update UnRar to 5.91 and MultiPar to 1.3.1.0.
 - Windows: retry `Access Denied` when renaming files on Windows. 
@@ -39,12 +23,17 @@ Release Notes - SABnzbd 3.1.0 Release Candidate 3
 - Assembler crashes could occur due to race condition in `ArticleCache`.
 - On HTTP-redirects the scheme/hostname/port were ignored when behind a proxy.
 - Strip slash of the end of `url_base` as it could break other code.
+- `Temporary Folder` with unicode characters could result in duplicate unpacking.
 - Unpacking with a relative folder set for a category could fail.
+- Existing files were not parsed when retrying a job.
+- Reading attributes when retrying a job could result in crash.
 - Paused priority of pre-queue script was ignored.
 - Duplicate Detection did not check filenames in History.
 - Downloaded bytes could show as exceeding the total bytes of a job.
+- Filtering of history by category would not filter jobs in post-processing.
 - Windows: non-Latin languages were displayed incorrectly in the installer.
 - Windows: could fail to create folders on some network shares.
+- Windows: folders could end in a period, breaking Windows Explorer.
 
 ## Upgrade notices
 - Jobs that failed on versions before 3.1.x, will throw an error about the 
