--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,8 @@
-Release Notes - SABnzbd 3.2.1 Release Candidate 1
+Release Notes - SABnzbd 3.2.1 Release Candidate 2
 =========================================================
+
+## Changes and bugfixes since 3.2.1 RC 1
+- Improvements to the encrypted RAR-detection.
 
 ## Changes and bugfixes since 3.2.0
 - Single `Indexer Categories` in Categories were broken.
